--- a/css/index.css
+++ b/css/index.css
@@ -57,3 +57,39 @@ body{
     height: 5px;
 }
 
+@media screen and (max-width: 550px)
+{
+    .calculator {
+   width: 100%;
+    height: 100%px;
+    margin-top: 10px;
+    /* background: rgba(0, 0, 0, 0.9); */
+    background-color: #F4DFD0;
+    margin: auto auto;
+    margin-top: 67px;
+    height: 749px;
+        }
+
+.display {
+    width: 100%;
+    background-color: black;
+    height: 198px;
+    padding: 4px;
+    margin-top: -66px;
+}
+
+.button {
+    margin: 5px;
+    width: 76px;
+    border-width: 0px;
+    border-radius: 50%;
+    height: 95px;
+    background-color: transparent;
+    font-size: 20px;
+    color: black;
+    font-weight: 500;
+}
+}
+
+
+
